<resources>
    <string name="app_name">寸光阴</string>
    <string name="setting_list">清单设置</string>
    <string name="title_todo">待办</string>
    <string name="title_view">视图</string>
    <string name="title_course">课程</string>
    <string name="title_more">更多</string>
    <string name="edit_list_title">编辑清单</string>
    <string name="create_list_title">创建清单</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="select_color">清单颜色</string>
    <string name="list_hint">请输入清单的名字</string>
    <string name="title_delete">删除清单</string>
    <string name="massagedelete">清单中所有任务将被删除</string>
    <string name="confirmdelete">删除</string>
    <string name="sort">排序</string>
    <string name="collectbox_all">所有</string>
    <string name="collectbox_today">今天</string>
    <string name="collectbox_important">重要</string>
    <string name="collectbox_planned">已计划</string>
    <string name="collectbox_collectbox">收集箱</string>
    <string name="collectbox_finished">已完成</string>
    <string name="collectbox_add">添加清单</string>
    <string name="collectbox_setting">清单设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="todo_item_detail_add_ddl">添加截止日期</string>
    <string name="todo_item_detail_add_execute_time">添加执行时间</string>
    <string name="todo_item_detail_add_notice">添加提醒</string>
    <string name="todo_item_detail_input_hint">添加备注</string>
    <string name="title_activity_todo_item_detail">TodoItemDetailActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string-array name="list_icon">
        <item>收件箱</item>
        <item>清单1</item>
        <item>清单2</item>
        <item>清单3</item>
    </string-array>
    <string-array name="remind_choose">
        <item>截止时间提醒</item>
        <item>执行时间提醒</item>
    </string-array>
    <string name="databaseName">Database.db</string>
</resources>