<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_todo">

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.myapplication.ui.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.example.myapplication.ui.view.ViewFragment"
        android:label="@string/title_view"
        tools:layout="@layout/fragment_view" />
    <fragment
        android:id="@+id/navigation_course"
        android:name="com.example.myapplication.ui.course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.myapplication.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/settingListsFragment"
        android:name="com.example.myapplication.ui.fragment.SettingListsFragment"
        android:label="fragment_setting_lists"
        tools:layout="@layout/fragment_setting_lists" />
</navigation>