<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/edit_list_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/list_name"
        android:width="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:hint="请在此输入清单的名字"
        >
    </EditText>
    <LinearLayout
        android:id="@+id/showcolorline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/list_name">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="@id/showcolorline"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            >
        </TextView>
        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/round_button"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"

            >
        </Button>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelcolorbutton"
        android:backgroundTint="#AAA"
        android:textColor="#fff"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showcolorline"
        android:layout_marginTop="10dp"
        android:layout_marginStart="44dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmcolorbutton"
        android:backgroundTint="#02A7F0"
        android:textColor="#fff"
        android:text="@string/confirm"
        app:layout_constraintLeft_toRightOf="@id/cancelcolorbutton"
        app:layout_constraintTop_toBottomOf="@id/showcolorline"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>